[package]
name = "pseudonyws-client"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
acl = { path = "../acl" }
jsonwebtoken = { path = "../jsonwebtoken" }
tungstenite = { version = "0.24.0" }
url = "2.5.4"
curve25519-dalek = "4.1.3"
serde = { version = "1.0", features=["derive"]}
serde_json = { version = "1.0"}
base64 = "0.22"